--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "king-school-frontend",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
+    "stylelint-config-standard": "^29.0.0",
     "vite": "^4.0.0"
   },
   "dependencies": {
+    "stylelint": "^14.16.1",
     "swiper": "^8.4.7"
   }
 }
