--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vite": "^4.0.0"
   },
   "dependencies": {
+    "@fancyapps/ui": "^4.0.31",
     "stylelint": "^14.16.1",
     "swiper": "^8.4.7"
   }
